--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "movie-genres-api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "joi": "^17.13.3"
+  },
+  "devDependencies": {
+    "jest": "^30.0.2"
   }
 }
