--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.13.3"
   },
   "devDependencies": {
-    "jest": "^30.0.2"
+    "jest": "^30.0.2",
+    "supertest": "^7.1.1"
   }
 }
